--- a/Current_COVID/frontend/package.json
+++ b/Current_COVID/frontend/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -11,10 +14,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^5.6.3",
-    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.6",
-    "semantic-ui-react": "^2.1.4",
+    "recoil-persist": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
