--- a/Current_COVID/frontend/package.json
+++ b/Current_COVID/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^5.6.3",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.6",
     "recoil-persist": "^4.2.0",
